ingress/ingress-demo.yaml
#Remark: require to run command below, in order to allow host machnie to access ingress service inside minikube server
#   > minikube tunnel
#
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-demo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:           
  - host: k8s-api.example.local
    http:
      paths:
      - pathType: Prefix 
        path: /
        backend:
          service:
            name: kubernetes 
            port:
              number: 443
  tls:
  - hosts:
    - k8s-api.example.local
    secretName: temptest-tls
