ingress/ingress-monitoring.yaml
#Remark: require to run command below, in order to allow host machnie to access ingress service inside minikube server
#   > minikube tunnel
#
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:           
  - host: grafana.example.local
    http:
      paths:
      - pathType: Prefix 
        path: /
        backend:
          service:
            # name: prometheus-grafana 
            name: grafanatemptest
            port:
              number: 80
  - host: prometheus.example.local
    http:
      paths:
      - pathType: Prefix 
        path: /
        backend:
          service:
            name: prometheustemptest-prometheus
            port:
              number: 80
  - host: prometheus-alertmanager.example.local
    http:
      paths:
      - pathType: Prefix 
        path: /
        backend:
          service:
            name: prometheustemptest-alertmanager
            port:
              number: 80
